// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reusable Components DefaultSettingCheckBoxWithTrueAndFalse 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main settingCheckBoxContainer StyledProps--flex StyledProps--flex-alignItems-flex-start"
  >
    <label
      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox defaultSettingRenderer StyledProps--main"
    >
      <input
        name="check"
        type="checkbox"
      />
      <span
        class="bp3-control-indicator"
      />
      
    </label>
  </div>
</div>
`;

exports[`Reusable Components DefaultSettingCheckBoxWithTrueAndFalse with different labels 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main settingCheckBoxContainer StyledProps--flex StyledProps--flex-alignItems-flex-start"
  >
    <label
      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox defaultSettingRenderer StyledProps--main"
    >
      <input
        name="check"
        type="checkbox"
      />
      <span
        class="bp3-control-indicator"
      />
      
    </label>
  </div>
</div>
`;

exports[`Reusable Components DefaultSettingRadioBtnWithTrueAndFalse 1`] = `
<div>
  <div
    class="bp3-form-group bp3-inline"
    style="margin: 0px;"
  >
    <div
      class="bp3-form-content"
    >
      <div
        class="FormikForm--inlineRadioGroup StyledProps--main"
      >
        
        <div
          class="RadioButtonGroup--inline"
        >
          <label
            class="RadioButton--radio StyledProps--main"
          >
            <input
              class="RadioButton--input"
              name="nbr"
              type="radio"
              value="true"
            />
            <span
              class="RadioButton--radioIcon"
            />
            common.true
          </label>
          <label
            class="RadioButton--radio StyledProps--main"
          >
            <input
              checked=""
              class="RadioButton--input"
              name="nbr"
              type="radio"
              value="false"
            />
            <span
              class="RadioButton--radioIcon"
            />
            common.false
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Reusable Components DefaultSettingStringDropDown 1`] = `
<div>
  <div
    class="bp3-form-group defaultSettingRenderer"
  >
    <div
      class="bp3-form-content"
    >
      <div
        class="bp3-popover-wrapper Select--main bp3-fill"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="bp3-input-group"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="drpdown"
              placeholder="- Select -"
              style="padding-right: 0px;"
              type="text"
              value="bcd"
            />
            <span
              class="bp3-input-action"
            >
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="14"
                  viewBox="0 0 16 16"
                  width="14"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
        <div
          class="bp3-overlay bp3-overlay-inline"
        >
          <div
            class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
            style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
          >
            <div
              class="bp3-popover bp3-minimal bp3-select-popover Select--popover"
            >
              <div
                class="bp3-popover-content"
              >
                <div>
                  <ul
                    class="bp3-menu"
                  >
                    <li
                      class="Select--menuItem Select--active"
                    >
                      <p
                        class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                        style="--text-line-clamp: 1;"
                      >
                        abcd
                      </p>
                    </li>
                    <li
                      class="Select--menuItem"
                    >
                      <p
                        class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                        style="--text-line-clamp: 1;"
                      >
                        bcd
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Reusable Components DefaultSettingTextbox 1`] = `
<div>
  <div
    class="bp3-form-group"
  >
    
    <div
      class="bp3-form-content"
    >
      <div
        class="Layout--horizontal StyledProps--main MultiTypeInput--main"
      >
        <div
          class="bp3-input-group MultiTypeInput--input"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="nbr"
            type="number"
            value=""
          />
        </div>
        <span
          class="bp3-popover-wrapper MultiTypeInput--wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="MultiTypeInput--btn MultiTypeInput--FIXED"
              data-testid="multi-type-button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="fixed-input"
              >
                <svg
                  height="12"
                  viewBox="0 0 9 9"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Reusable Components no DefaultSettingStringDropDown 1`] = `<div />`;

exports[`Reusable Components text box 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group"
    >
      
      <div
        class="bp3-form-content"
      >
        <div
          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
        >
          <div
            class="bp3-input-group MultiTypeInput--input"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="textbx"
              type="text"
              value="user name"
            />
          </div>
          <span
            class="bp3-popover-wrapper MultiTypeInput--wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="MultiTypeInput--btn MultiTypeInput--FIXED"
                data-testid="multi-type-button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="fixed-input"
                >
                  <svg
                    height="12"
                    viewBox="0 0 9 9"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
